Switched to emit #line directives by default.

--- a/man/cch.1
+++ b/man/cch.1
@@ -12,14 +12,14 @@ Specify the input .cch file.
 Specify the output directory.
 .SS "-d, --debug"
 Enable debug output.
-.SS "-l, --lineNumbers"
-Emit #line directives.
-.SS "-x, --nobanner"
-Don't add CCH banner to generated files.
 .SS "-h, --help"
 Show this help menu and exit.
 .SS "-v, --version"
 Show program version and exit.
+.SS "--noLineNumbers"
+Don't emit #line directives.
+.SS "--noBanner"
+Don't add CCH banner to generated files.
 .SS "--ccExtension=<ext>"
 Set output extension for implementation file. Defaults to 'cc'
 .SS "--hExtension=<ext>"
